Exclamation mark for awesome techs!

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -62,7 +62,7 @@ notes:
       </div>
     </div>
     <div class="maker-people__staff">
-      <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
+      <div class="maker-staff__label">Scholars’ Lab Staff Technologists!</div>
       <div class="maker-staff__list">
         <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities<br/>
         <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
