Updates Gemfile ruby, closes #422

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <article class="home-wrapper">
 	<header class="home-landing-wrapper">
-{% include snowday.html %}
+<!-- {% include snowday.html %} -->
 		<div class="home-landing__big-title">
 			<div class="home-title__text">
 				<span class="show-if-big--css">We are<br/>a community<br/>for experimental<br/>scholarship.</span>
