More flexible way to link to people and rename drafts folder

--- a/pages/work.html
+++ b/pages/work.html
@@ -52,7 +52,7 @@ order: 3
         {% for project in site.work %}
 
         <div class="people-item-wrapper">
-          <a href="{{ site.url }}/work/{{ project.slug }}" aria-label="{{ project.title }}">
+          <a href="/work/{{ project.slug }}" aria-label="{{ project.title }}">
             <div class="people-item__img">
 
             <img src="{{ site.url }}{{ '/assets/img/work/' | append: project.thumb-img | relative_url }}" alt="{{ project.title }}">
