1st 2 mentions of "community" link to events page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Home
 <!-- {% include snowday.html %} -->
 		<div class="home-landing__big-title">
 			<div class="home-title__text">
-				<span class="show-if-big--css">We are<br/>a community<br/>for experimental<br/>scholarship.</span>
-				<span class="show-if-small--css">We<br/>are a<br/>community<br/>for<br/>experimental<br/>scholarship.</span>
+				<span class="show-if-big--css">We are<br/>a <a href="{{ site.url }}/events">community</a><br/>for experimental<br/>scholarship.</span>
+				<span class="show-if-small--css">We<br/>are a<br/><a href="{{ site.url }}/events">community</a><br/>for<br/>experimental<br/>scholarship.</span>
 			</div>
 		</div>
 		<div class="home-landing__hero-text">
@@ -19,7 +19,7 @@ title: Home
 			</div> <!-- we practice? -->
 			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
-				<p>At the Scholars' Lab, our most important scholarship is our community: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what scholarship with an ethic of care means&mdash;we'd love you to be part of our community! </p>
+				<p>At the Scholars' Lab, our most important scholarship is our <a href="{{ site.url }}/events">community</a>: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what scholarship with an ethic of care means&mdash;we'd love you to be part of our community! </p>
 			</div>
 		</div>
 	</header>
