--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ title: Home
 			<div class="home-title__text">
 				<span class="show-if-big--css">We are<br/>a community<br/>for experimental<br/>scholarship.</span>
 				<span class="show-if-small--css">We<br/>are a<br/>community<br/>for<br/>experimental<br/>scholarship.</span>
+				<object type="image/svg+xml" data="{{ '/assets/img/svg/thin-down-arrow-white.svg' | relative_url }}" alt="Down arrow" id="hero-arrow">
+				Your browser does not support SVG
+			</object>
 			</div>
 		</div>
 		<div class="home-landing__hero-text">
