Update the hero

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ title: Home
 				</div>
 				{% endfor %}
 			</div>
+			<a href="/events">All events</a>
 			<!--div class="home-events__cta"><a href="/events">All Events</a></div-->
 		</section>
 
