Add link to all events

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ title: Home
 				</div>
 				{% endfor %}
 			</div>
-			<a href="/events">All events</a>
+			<p><a href="{{ site.url }}/events">All events</a></p>
 			<!--div class="home-events__cta"><a href="/events">All Events</a></div-->
 		</section>
 
