Update arrom css

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -183,6 +183,7 @@ order: 8
   <div class="makerspace__diagram">
     <!-- commission diagram from Beth -->
     <!--div>Diagram!!!</div-->
+    <p>Alderman Library Floor Plan, 4th Floor</p> 
     <div class="maker-diagram__img"><img src="../assets/img/svg/alderman-floorplan.svg" alt="Makerspace dummy floorplan"></div>
   </div>
 
