--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -183,8 +183,9 @@ order: 8
   <div class="makerspace__diagram">
     <!-- commission diagram from Beth -->
     <!--div>Diagram!!!</div-->
-    <p>Alderman Library Floor Plan, 4th Floor</p> 
-    <div class="maker-diagram__img"><img src="../assets/img/svg/alderman-floorplan.svg" alt="Makerspace dummy floorplan"></div>
+    <div class="maker-diagram__img"><img src="../assets/img/svg/alderman-floorplan.svg" alt="Makerspace dummy floorplan">
+    {% include makerspace-floorplan.html %}</div>
+    <p id="makerspace-location-label">Makerspace and Public Space, 4th Floor Alderman</p> 
   </div>
 
   <div class="makerspace__questions">
