Adds trailing slashes.

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@ title: Home
 		<!-- faq: -->
 		<section class="home__faq">
 			<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
-			<div class="home-faq__subtitle">Check out <a href="/about">answers to common questions</a> including:</div>
+			<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
 			<ul class="home-faq__questions">
-				<li><a href="/about#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
-				<li><a href="/about#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></li>
-				<li><a href="/about#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>
+				<li><a href="/about#what-is-the-scholars-lab/">What is the Scholars' Lab?</a></li>
+				<li><a href="/about#how-can-the-scholars-lab-fit-into-my-work/">How can you fit into my work?</a></li>
+				<li><a href="/about#how-does-the-lab-fit-into-the-uva-library/">How do you fit into the UVA Library?</a></li>
 			</ul>
-			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="about">About Scholars' Lab</a></div>
+			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
 		</section>
 
 		<!-- library: -->
 		<section class="home__library">
-			<div class="home-lib__title"><a href="/library">The Library's Lab</a></div>
+			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
 			<div class="home-lib__content">
 				<p>We are the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
@@ -114,7 +114,7 @@ title: Home
 					<li data-fill="teal" data-name="offices"><span>Staff offices</span></li>
 				</ul>
 			</div>
-			<p class="home-find__link">See full list of <a href="/hours-and-spaces" aria-label="hours and spaces page">hours &amp; spaces</a>.</p>
+			<p class="home-find__link">See full list of <a href="/hours-and-spaces/" aria-label="hours and spaces page">hours &amp; spaces</a>.</p>
 		</section>
 
 		<!-- events: -->
@@ -134,12 +134,12 @@ title: Home
 						<li><span>Where:</span> {{ event.location }}</li>
 					</ul>
 					<div class="events-item__cta">
-						<a href="{{ site.url }}/events/{{ event.slug }}">Details &rsaquo;</a>
+						<a href="{{ site.url }}/events/{{ event.slug }}/">Details &rsaquo;</a>
 					</div>
 				</div>
 				{% endfor %}
 			</div>
-			<p><a href="{{ site.url }}/events">All events</a></p>
+			<p><a href="{{ site.url }}/events/">All events</a></p>
 			<!--div class="home-events__cta"><a href="/events">All Events</a></div-->
 		</section>
 
@@ -155,7 +155,7 @@ title: Home
 		<!-- student opportunities: -->
 		<section class="home__student-opps">
 			<div class="home-student__content">
-				<div class="home-student__title"><a href="/for-students">For Students</a></div>
+				<div class="home-student__title"><a href="/for-students/">For Students</a></div>
 				<div class="home-student__text">
 					<p>One of our primary missions is to support the work of emerging scholars and digital scholarship practitioners&mdash;particularly UVa graduate students.</p>
 					<p>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
@@ -163,12 +163,12 @@ title: Home
 				</div>
 			</div>
 			<div class="home-student__img" title="Placeholder image"></div>
-			<div class="home-student__cta"><a href="/for-students">See All</a></div>
+			<div class="home-student__cta"><a href="/for-students/">See All</a></div>
 		</section>
 
 		<!-- makerspace -->
 		<section class="home__makerspace">
-			<div class="home-maker__title"><a href="/makerspace">Makerspace</a></div>
+			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
 			<div class="home-maker__hours">
 				<div>Staffed Hours</div>
 				<span>Mondays:</span>1-7pm<br/>
@@ -181,15 +181,15 @@ title: Home
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
 				<p>Find things like 3-D printing, wearable technologies, physical computing, & more at our space in the middle of the Scholars' Lab Common Area.</p>
 			</div>
-			<div class="home-maker__cta"><a href="/makerspace">Makerspace Home</a></div> <!-- had it as "Makerspace Page >" for a bit -->
+			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div> <!-- had it as "Makerspace Page >" for a bit -->
 		</section>
 
 		<!-- spatial tech: -->
 		<section class="home__spatial-tech">
-			<div class="home-spatial__title"><a href="/spatial-technologies">Spatial Technologies</a></div>
+			<div class="home-spatial__title"><a href="/spatial-technologies/">Spatial Technologies</a></div>
 			<div class="home-spatial__text">
 				<p><strong>Experts at thinking about space + time.</strong></p>
-				<p>We've got experts in GIS, cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and other spatial approaches (including our own <a href="http://neatline.org">Neatline</a> project for telling stories that combine timelines and maps).</p>
+				<p>We've got experts in GIS, cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and other spatial approaches (including our own <a href="http://neatline.org/">Neatline</a> project for telling stories that combine timelines and maps).</p>
 			</div>
 			<ul class="home-spatial__hours">
 				<h3>Cultural heritage informatics</h3>
@@ -199,7 +199,7 @@ title: Home
 				<li>Office: 417 Alderman</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 			</ul>
-			<div class="home-spatial__cta"><a href="/spatial-technologies">Spatial Tech Home</a></div>
+			<div class="home-spatial__cta"><a href="/spatial-technologies/">Spatial Tech Home</a></div>
 		</section> <!-- end sections -->
 	</main> <!-- end main content -->
 </article> <!-- end wrapper -->
