Corrects slash location.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ title: Home
 			<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
 			<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
 			<ul class="home-faq__questions">
-				<li><a href="/about#what-is-the-scholars-lab/">What is the Scholars' Lab?</a></li>
-				<li><a href="/about#how-can-the-scholars-lab-fit-into-my-work/">How can you fit into my work?</a></li>
-				<li><a href="/about#how-does-the-lab-fit-into-the-uva-library/">How do you fit into the UVA Library?</a></li>
+				<li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
+				<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></li>
+				<li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>
 			</ul>
 			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
 		</section>
