Corrects display order on home page.

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ title: Home
 			<!-- !! NB: events description is commented out; feel free to un-comment out if we want to use it -->
 			<!--div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div-->
             {% assign events = "" | split: "" %}
+            {% assign allevents = site.events | sort: 'start_date' %}
             {% assign today = site.time | date: '%Y%m%d' | plus:0 %}
-            {% for event in site.events %}
+            {% for event in allevents %}
                 {% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}
                 {% if eventdate > today %}
                     {% assign events = events | push: event %}
