Started removing Katherine's lorem GISum
So we don't accidentally leave GIS-like text in when it hasn't been written by the Spatial Tech team

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -57,8 +57,8 @@ order: 6
 		<div class="spatial-mission__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="spatial-mission__text">
-			<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection, use, and preservation of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom.</p>
-			<p>We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own <a href="http://neatline.org">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
+			<p>[What we specialize in.][Our expert staff can help you with XYZ.]</p>
+			<p>We provide training, consultations, and collaboration on the latest software, equipment, and methods, including GIS, 3D modeling, laser scanning, aerial drones, photogrammetry, our own <a href="http://neatline.org">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
 		</div>
 	</div>
 
@@ -77,46 +77,35 @@ order: 6
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 				<h3>Cultural heritage informatics</h3>
 				<li>Hours: by appointment</li>
-				<li>Office: by appointment (Clemons is closed during Summer 2018)</li>
+				<li>Office: by appointment</li>
+			</ul>
+			<ul class="spatial-starting__gis">
+			<h3>Resources</h3>
+			<li><span>University support of GIS:</span> <a href="https://guides.lib.virginia.edu/c.php?g=514920&p=3520109">GIS Lib Guide</a></li>
+			<li><span>Cultural heritage informatics at UVA:</span> <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">data, demos, and news</a></li>
 			</ul>
 		</div>
 	</div>
 
 	<div class="spatial__faq">
 		<div class="spatial-faq__title">Frequently<br/>Asked<br/>Questions</div>
-		<div class="spatial-faq__subtitle">A subtitle if we want one. <em>Designer's Note: in my head I just. keep. reading this. with the same creepy emphasis as "a democracy... <strong>if you can keep it."</strong> GAH ok the end.</em></div>
+		<div class="spatial-faq__subtitle">[Subtitle, if desired.]</em></div>
 		<ul class="spatial-faq__list">
 			<!-- extra spaces b/t them so more readable code until we fill stuff in: -->
-			<li><img src="{{ 'assets/img/svg/asterisk-2.svg' | relative_url }}" alt="asterisk drawing" style="height:20px;width:20px"> <span>What is spatial tech?</span>Our Spatial Technologies team combines overlapping expertise in GIS, cultural heritage informatics, and other methods of exploring space and place.</li>
+			<li><img src="{{ 'assets/img/svg/asterisk-2.svg' | relative_url }}" alt="asterisk drawing" style="height:20px;width:20px"> <span>What are spatial technologies?</span>[Answer XYZ, e.g. "Our Spatial Technologies team combines overlapping expertise in GIS, cultural heritage informatics, and other methods of exploring space and place."]</li>
 
-			<li><span>Isn't GIS just online maps?</span> E.g., explainers CHI has on their site, some FAQs that GIS links to maybe</li>
+			<li><span>[Another question]</span> [Answer XYZ]</li>
 
-			<li><span>What's the best way to get in touch?</span>Need help finding data, getting it on a map, or downloading the newest version of ArcGIS?  Check the FAQ’s on the GIS research page, search the UVA Library Geoportal, or come to a session in our Fall or Spring workshop series.   You can also consult directly with GIS specialist Chris Gist.  If you have questions or would like to schedule an appointment, please contact slabgis@virginia.edu (GIS specifically) or spatial@virginia.edu (spatial technology in general).</li>
+			<li><span>[Another question]</span>[Answer XYZ]</li>
 
-			<li><span>What does Spatial Tech have to do with social justice?</span>Cultural heritage consists of tangible and intangible, natural and cultural, movable and immovable assets inherited from the past. It is of extremely high value for the present and the future of a country. Access, preservation, and education around cultural heritage are essential for the evolution of people and their culture. [NB: this is not an actual answer to the question, just more realistic words than lorem ipsum.]</li>
+			<li><span>[Another question]</span>[Answer XYZ]</li>
 
-			<li><span>Lorem ipsum foo bar bas bat bamus batis bant?</span>Katherine remembers gibberish Latin better than she thought.</li>
+			<li><span>[Another question]</span>[Answer XYZ]</li>
 		</ul>
 	</div>
-
-	<div class="spatial__contact">
-	  <div class="spatial-contact__title">Contact</div>
-	  <div class="spatial-contact__text">Either an hours & spaces diagram, or organized contact info/process for setting up an appointment.</div>
-	</div>
-
-	<!-- meant as more in-depth pairing w/ FAQ: -->
-	<div class="spatial__resources">
-		<div class="spatial-resources__title">Resources</div>
-		<div class="spatial-resources__subtitle">Didn't find what you were looking for, or want to explore these subjects more in-depth? [See...the stuff...below... or don't phrase this as a question whoops]</div>
-		<ul class="spatial-resources__list">
-			<li><span>University support of GIS:</span> <a href="https://guides.lib.virginia.edu/c.php?g=514920&p=3520109">GIS Lib Guide</a></li>
-			<li><span>Cultural heritage informatics at UVA:</span> <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">data, demos, and news</a></li>
-		</ul>
-	</div>
-
 	<div class="spatial__inventory">
 		<div class="spatial-inventory__title">Tools, Data, Equipment</div> <!-- placeholder title -->
-<p>* = by appointment/request only  /  ^ = not distributed</p>
+<p>* = by appointment/request only. ^ = not distributed</p>
 
 		<!-- copy/pasting makerspace version right now since styles already exist -->
 		<div class="maker-inventory__list">
