--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -201,37 +201,9 @@ order: 6
 		</ul> <!-- end person list -->
 	</div>
 
-	<div class="spatial__inclusion-note">
-		<div class="spatial-inclusion__title">A Note on Belonging</div>
-		<div class="spatial-inclusion__text">
-			<p>This text is separate and apart from the blurbs up top explaining what Spatial Tech does and what methods they use to do it. This is a space to explicitly indicate that Spatial Tech is <em>not</em> a boys' club for flying drones, or outdoorsy people, or people who already know how to use ArcGIS and what "photogrammetry" means.</p>
-			<p>This text is necessary here just as it is necessary in the Makerspace page&mdash;women, people of color, and other marginalized groups are much less likely to have had ambient exposure to these types of tools; and much less likely to have been encouraged to keep trying if they didn't get it perfectly the first time. This is a space for learning and curiosity; not for making judgments about groups. A primary mission of Spatial Technologies in the Scholars' Lab is to highlight systemic, endemic injustices rendered invisible by decisions to exclude whole groups from dignified historical record. We need your skills, questions, and backgrounds to succeed, and hope you'll join us.</p>
-		</div>
-	</div>
-
-	<div class="spatial__workshops">
-		<div class="spatial-workshops__title">Our Workshops</div>
-		<div class="spatial-workshops__subtitle">Something about repeating workshop series every semester. Note the usual when/where in this section. Upcoming events:</div>
-		<ul class="spatial-workshops__list">
-			<!-- Possibly use Liquid for this, depending on if it's worth making workshops a collection? -->
-			{% assign workshops = site.events | where_exp: "event", "event.title contains 'GIS'" %}
-			{% if workshops.size < 1 %}
-			<li><em>There are no upcoming workshops at this time. :(</em></li>
-			{% else %}
-			{% for event in workshops limit:3 %}
-			<li>
-				<div class="spatial-workshop__ws-title"><a href="{{ site.baseurl }}/events/{{ event.slug }}">{{ event.title }}</a></div>
-				<div class="spatial-workshop__logistics">Some sort of brief logistical info&mdash;a sentence description if the title isn't particularly illuminating, or the when/where info if doesn't change.</div>
-				<div class="spatial-workshop__cta"><a href="/events">See More &rsaquo;</a></div> <!-- link to events page -->
-			</li>
-			{% endfor %}
-			{% endif %}
-		</ul>
-	</div>
-
 	<div class="spatial__showcase">
 		<div class="spatial-showcase__title">A Project Sampler</div>
-		<div class="spatial-showcase__subtitle">A selection of projects we're pretty dang proud of. To see more of our work, head over to our <a href="{{ site.baseurl }}/work">Research page</a>.</div>
+		<div class="spatial-showcase__subtitle">A selection of projects we're pretty dang proud of. To see more of our work, head over to our <a href="{{ site.baseurl }}/work">work page</a>!</div>
 		<ul class="spatial-showcase__list">
 			{% for project in site.research %}
 			{% if project.title contains 'Falmouth' or project.title contains 'Catalogue of Ships' or project.title contains 'Neatline' %}
