Smaller UVA Library logo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: Home
 		<section class="home__library">
 			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
 			<div class="home-lib__content">
-				<p><img src="/assets/img/decorative/uvalibrary-logo.svg"></p>
+				<p><img src="/assets/img/decorative/uvalibrary-logo-250px.png"></p>
 				<p>We are the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
 				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
