--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ title: Home
 		<div class="home-landing__hero-text">
 			<div class="home-hero__hook">
 				<h3>What We Do</h3>
-				<p>Experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches.</p>
+				<p>We're the UVA Library's lab for experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches. We collaborate with and offer mentorship for anyone curious about getting their hands dirty.</p>
 			</div> <!-- we practice? -->
 			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
-				<p>At the Scholars' Lab, our most important scholarship is our community: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what scholarship with an ethic of care means&mdash;we'd love you to be part of our community! </p>
+				<p>At the Scholars' Lab, our most important scholarship is our community: mentors, learners, researchers, teachers, crafters & makers, and collaborators from both on and off Grounds. Come help us explore what scholarship with an ethic of caring means&mdash;we'd love you to be part of our community!</p>
 			</div>
 		</div>
 	</header>
@@ -48,7 +48,6 @@ title: Home
 			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
 			<div class="home-lib__content">
 				<p><img src="/assets/img/decorative/uvalibrary-logo-250px.png"></p>
-				<p>We are the UVA Library's lab for experimental and digital research, teaching, and other forms of scholarship, open to all disciplines and anyone curious about getting their hands dirty.</p>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
 				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
 				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a> to find out more about the whole Library.</p>
