--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 		<div class="home-landing__hero-text">
 			<div class="home-hero__hook">
 				<h3>What We Do</h3>
-				<p>We're the UVA Library's lab for experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches. We collaborate with and offer mentorship for anyone curious about getting their hands dirty.</p>
+				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s lab for experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches. We offer mentoring, collaboration, and a safe space for anyone curious about learning to apply new approaches that push disciplinary and methodological boundaries.</p>
 			</div> <!-- we practice? -->
 			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
@@ -47,7 +47,7 @@ title: Home
 		<section class="home__library">
 			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
 			<div class="home-lib__content">
-				<p><img src="/assets/img/decorative/uvalibrary-logo-250px.png"></p>
+				<p><a href="http://library.virginia.edu"><img src="/assets/img/decorative/uvalibrary-logo-250px.png"></a></p>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
 				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
 				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a> to find out more about the whole Library.</p>
