--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@ title: Home
 		<div class="home-landing__hero-text">
 			<div class="home-hero__hook">
 				<h3>What We Do</h3>
-				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s lab for experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches. We offer mentoring, collaboration, and a safe space for anyone curious about learning to apply new approaches that push disciplinary and methodological boundaries.</p>
-			</div> <!-- we practice? -->
+				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s lab for experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches.</p>
+				<p>We offer mentoring, collaboration, and a safe space for anyone curious about learning to push disciplinary and methodological boundaries through new approaches.</p>
+			</div>
 			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
-				<p>At the Scholars' Lab, our most important scholarship is our community: mentors, learners, researchers, teachers, crafters & makers, and collaborators from both on and off Grounds. Come help us explore what scholarship with an ethic of caring means&mdash;we'd love you to be part of our community!</p>
+				<p>At the Scholars' Lab, our most important scholarship is our community: peers, learners, mentors, researchers, teachers, crafters & makers, and collaborators from both on and off Grounds. Come help us explore what scholarship with an ethic of caring means&mdash;we'd love you to be part of our community!</p>
 			</div>
 		</div>
 	</header>
