--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -58,10 +58,10 @@ order: 8
     <div class="maker-people__staff">
       <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
       <div class="maker-staff__list">
-        <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities<br/>
-        <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
         <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br/>
-        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities
+        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities<br/>
+        <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
+        <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
       </div>
     </div>
   </div>
@@ -117,7 +117,7 @@ order: 8
       <!-- Textiles, Wearables - Learn how to take fashion into the future. -->
       <ul class="maker-list__wearables">
         <span>Textiles & Wearables</span>
-        <li>Bernini sewing machines + surger</li>
+        <li>Bernini sewing machines + serger</li>
         <li>Basic supplies for wearables and tactile computing</li>
         <li>Felt</li>
         <li>Sewing needles and thread</li>
