--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Home
 		<section class="home__library">
 			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
 			<div class="home-lib__content">
-				<p><a href="http://library.virginia.edu"><img src="/assets/img/decorative/uvalibrary-logo-250px.png"></a></p>
+				<a href="http://library.virginia.edu" class="uva-library-logo-link"><img src="/assets/img/decorative/uvalibrary-logo-250px.png" alt=""></a>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
 				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
 				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a> to find out more about the whole Library.</p>
