--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@ title: Home
 				<p><strong>Experts at thinking about space + time.</strong></p>
 				<p>We've got experts in GIS, cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and other spatial approaches (including our own <a href="http://neatline.org/">Neatline</a> project for telling stories that combine timelines and maps).</p>
 			</div>
+			<h3>Cultural heritage informatics</h3>
 			<ul class="home-spatial__hours">
-				<h3>Cultural heritage informatics</h3>
 				<li>Hours: by appointment</li>
 				<li>Office: by appointment (Clemons is closed during Summer 2018)</li>
-				<h3>GIS</h3>
+            </ul>
+			<h3>GIS</h3>
+			<ul class="home-spatial__hours">
 				<li>Office: 417 Alderman</li>
 		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
 			</ul>
