--- a/assets/css/_sass/_components/nav_back-to-top/nav.html
+++ b/assets/css/_sass/_components/nav_back-to-top/nav.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="nav-wrapper">
 		<div class="nav__arrow--back">
-			<a href="http://maybe.scholarslab.org"><img src="img/_nav/left-arrow-white.svg" alt="back arrow"></a>
+			<a href="http://scholarslab.org"><img src="img/_nav/left-arrow-white.svg" alt="back arrow"></a>
 		</div>
 		<div class="nav__arrow--top">
 			<a href="#top"><img src="img/_nav/left-arrow-white.svg" alt="back arrow"></a>
