--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -2,6 +2,7 @@
 layout: default
 title: Spatial Tech
 permalink: /spatial-technologies/
+redirect_from: "/geospatial-services/"
 nav: true
 order: 6
 ---
