--- a/pages/work.html
+++ b/pages/work.html
@@ -2,6 +2,7 @@
 layout: default
 title: Our Work
 permalink: /work/
+redirect_from: "/research/"
 excerpt: "Here we share a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers."
 nav: true
 order: 3
