--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 		<div class="home-landing__hero-text">
 			<div class="home-hero__hook">
 				<h3>What We Do</h3>
-				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s lab for experimental & digital scholarship in all fields, informed by humanities & cultural heritage approaches.</p>
+				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s community lab for the practice of experimental scholarship in all fields, informed by digital humanities, spatial technologies, & cultural heritage approaches.</p>
 				<p>We offer mentoring, collaboration, & a safe space for anyone curious about learning to push disciplinary & methodological boundaries through new approaches.</p>
 			</div>
 			<div class="home-hero__description">
@@ -36,11 +36,18 @@ title: Home
 		<section class="home__faq">
 			<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
 			<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
+
 			<ul class="home-faq__questions">
-				<li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
-				<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></li>
-				<li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>
-			</ul>
+<li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
+<li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>				
+<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></li>
+<li><a href="about/#can-you-build-me-a-thing">Can you build me a thing?</a></li>
+<li><a href="about/#can-we-collaborate">Can we collaborate on something?</a></li>
+				
+<li><a href="/about/#where-are-you">Where are you?</a></li>
+<li><a href="about/#how-do-i-contact-you">How do I contact you?</a></li>
+
+</ul>
 			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
 		</section>
 
