--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Home
 				<a href="http://library.virginia.edu" class="uva-library-logo-link"><img src="/assets/img/decorative/uvalibrary-logo-250px.png" alt=""></a>
 				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
 				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
-				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a> to find out more about the whole Library.</p>
+				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://lib.virginia.edu">UVA Library's main website</a>.</p>
 			</div>
 		</section>
 
@@ -69,7 +69,7 @@ title: Home
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
 					<p>Curious? Please get in touch with us&mdash;absolutely no prior experience or fully formed ideas needed!</p>
-					<p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions, or if you already know you want to meet with us. Or sign up for our newsletter to hear about events and opportunities.</p>
+					<p>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions, or if you already know you want to meet with us. Sign up for our newsletter to hear about events and opportunities!</p>
 				</div>
 
 				<div class="home-contact__newsletter">
