Office hours -> FAQ space

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ title: Home
 		<!-- section 1: -->
 
 		<!-- faq: -->
-		<section class="home__faq">
-			<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
-			<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
+<section class="home__faq">
+<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
+<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
 
-			<ul class="home-faq__questions">
+<ul class="home-faq__questions">
 <li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
 <li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>				
 <li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></li>
@@ -46,11 +46,18 @@ title: Home
 				
 <li><a href="/about/#where-are-you">Where are you?</a></li>
 <li><a href="about/#how-do-i-contact-you">How do I contact you?</a></li>
-
 </ul>
-			<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
-		</section>
 
+<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
+</section>
+
+<!-- open office hours: -->
+<section class="home__office-hours">
+			<div class="home-hours__title">Open Office Hours</div>
+			<div class="home-hours__when">Every Wednesday during fall and spring term,<br/>10am-11:30am.</div>
+			<div class="home-hours__info">Stop by the <a href="/hours-and-spaces/#the-common-room">discussion area</a> just inside the Scholars' Lab Common Room to chat with our experts about your ideas, from your earliest questions and broad ideas through formal projects.</div>
+		</section>
+		
 		<!-- library: -->
 		<section class="home__library">
 			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
@@ -157,13 +164,6 @@ title: Home
 			</div>
 			<p><a href="{{ site.url }}/events/">All events</a></p>
 			<!--div class="home-events__cta"><a href="/events">All Events</a></div-->
-		</section>
-
-		<!-- open office hours: -->
-		<section class="home__office-hours">
-			<div class="home-hours__title">Open Office Hours</div>
-			<div class="home-hours__when">Every Wednesday during fall and spring term,<br/>10am-11:30am.</div>
-			<div class="home-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
 		</section>
 
 		<!-- section 3: -->
