--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ title: Home
 			<div class="home-student__content">
 				<div class="home-student__title"><a href="/for-students/">For Students</a></div>
 				<div class="home-student__text">
-					<p>One of our primary missions is to support the work of emerging scholars and digital scholarship practitioners&mdash;particularly UVa graduate students.</p>
-					<p>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
+					<p>One of our primary missions is supporting the work of emerging scholars and practitioners&mdash;particularly UVa graduate students and folks interested in digital humanities and spatial technologies.</p>
+					<p>We offer a variety of <a href="/for-students/">fellowships and opportunities</a> to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
 					<p>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</p>
 				</div>
 			</div>
@@ -209,13 +209,12 @@ title: Home
 			</div>
 			<h3>Cultural heritage informatics</h3>
 			<ul class="home-spatial__hours">
-				<li>Hours: by appointment</li>
-				<li>Office: by appointment (Clemons is closed during Summer 2018)</li>
+				<li>Hours: <a href="mailto:spatial@virginia.edu">by appointment</a></li>
             </ul>
 			<h3>GIS</h3>
 			<ul class="home-spatial__hours">
 				<li>Office: 417 Alderman</li>
-		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there</li>
+		  	    <li>Hours: Weekdays 9-5 in general, but <a href="mailto: slabgis@virginia.edu">email the GIS folks</a> in advance if you need us to be there.</li>
 			</ul>
 			<div class="home-spatial__cta"><a href="/spatial-technologies/">Spatial Tech Home</a></div>
 		</section> <!-- end sections -->
