--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Home
 			</div>
 			<div class="home-hero__description">
 				<h3>Explore With Us</h3>
-				<p>At the Scholars' Lab, our most important scholarship is our community: learners, researchers, teachers, crafters, makers, and other collaborators from both on & off Grounds. Come help us explore what scholarship with an ethic of caring means&mdash;we'd love you to be part of our community!</p>
+				<p>We're foremost a space for learning together—about anything—by trying stuff. Think of us as friends and colleagues who can help you teach yourself new ways of approaching your interests. We'd love you to be part of our community!</p>
 			</div>
 		</div>
 	</header>
