--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Home
 <ul class="home-faq__questions">
 <li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
 <li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>				
-<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work">How can you fit into my work?</a></li>
+<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work-what-do-you-do">What does Scholars' Lab do? How can you fit into my work?</a></li>
 <li><a href="about/#can-you-build-me-a-thing">Can you build me a thing?</a></li>
 <li><a href="about/#can-we-collaborate">Can we collaborate on something?</a></li>
 				
