--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -189,7 +189,7 @@ order: 8
   </div>
 
   <div class="makerspace__questions">
-    <div class="maker-questions__text">Questions? Hesitant about joining us in the Makerspace? You belong here, and we're happy to meet with you, answer questions, and give you a tour to help you feel more at home.) Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</div>
+    <div class="maker-questions__text">Questions? Hesitant about joining us in the Makerspace? You belong here, and we're happy to meet with you, answer questions, and give you a tour to help you feel more at home. Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</div>
   </div>
 </div> <!-- end main content -->
 
