--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -160,7 +160,7 @@ order: 8
       <p>All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don’t see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">http://makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
     </div>
     <div class="maker-inventory__contact">
-      <p>If you have any questions or to want to schedule a printer or a consultation, please contact <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>. To see our open hours and printer reservations, visit <a href="http://scholarslab.org/makerspace/">http://scholarslab.org/makerspace/</a>.</p>
+      <p>If you have any questions or to want to schedule a printer or a consultation, please contact <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>. To see our open hours and printer reservations, scroll up to view the Makerspace calendar.</p>
     </div>
   </div>
 
